name: LambdaIntegrator
version: 0.2.0
cabal-version: >= 1.1
license: GPL
license-file: LICENSE
copyright: (c)2009  Esteban Alarcon Ceballos & Daniel Munera Sanchez
author:	    Esteban Alarcon Ceballos<ealarco1@eafit.edu.co>
	    Daniel Munera Sanchez<dmuneras@eafit.edu.co>
maintainer: Esteban Alarcon Ceballos<ealarco1@eafit.edu.co>
	    Daniel Munera Sanchez<dmuneras@eafit.edu.co>
stability:  Experimental
build-type: Simple
extra-source-files: Readme
executable:	LambdaIntegrator
build-depends:	base, uulib
main-is:        LambdaIntegrator.hs
hs-source-dirs:	src
other-modules:  GramaticaAbstracta, GramaticaConcreta, Semantica


